Add contact info / minor text change

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Leveraging recent advances in multimodal learning, our model consists of a novel
                         </div>
                     </div> <!-- dynamic-teaser -->
                     <p class="text-justify">
-                        Our goal is to effectively learn from both vision and text in a video. We propose a Co-attentional Multimodal Video Transformer (CoMVT), which given a video clip, extracts contextualized word embeddings and visual features from transcribed words and video frames respectively, and fuses the extracted features to form a multimodal video feature using a co-attentional transformer. We train the network to predict the true next utterance from a set of candidate utterances by minimizing the negative log-likelihood of the true next utterance. Additionally, we add the BERT-style masked language modelling loss, which appears to have a regularisation effect.
+                        Our goal is to effectively learn from both vision and text in a video. We propose a Co-attentional Multimodal Video Transformer (CoMVT), which given a video clip, extracts contextualized word embeddings and visual features from transcribed words and video frames respectively, and fuses the extracted features to form a multimodal video feature using a co-attentional transformer. We train the network to predict the true next utterance from a set of candidate utterances by minimizing the negative log-likelihood of the true next utterance. Additionally, we also train with a BERT-style masked language modelling loss, which appears to have a regularisation effect.
                     </p>
                 </div>
             </div>
@@ -306,6 +306,7 @@ Leveraging recent advances in multimodal learning, our model consists of a novel
             <div class="row mb-2">
                 <div class="col-md-8 mx-auto">
                     <h4 class="mb-3">&nbsp;</h4>
+                    <p>Contact phseo [AT] google [DOT] com for any queries.</p>
                     <h4 class="mb-3">&nbsp;</h4>
                     <h4 class="mb-3">&nbsp;</h4>
                 </div>
