Add copyright term

--- a/index.html
+++ b/index.html
@@ -305,12 +305,18 @@ Leveraging recent advances in multimodal learning, our model consists of a novel
             </div>
             <div class="row mb-2">
                 <div class="col-md-8 mx-auto">
-                    <h4 class="mb-3">&nbsp;</h4>
                     <p>Contact phseo [AT] google [DOT] com for any queries.</p>
-                    <h4 class="mb-3">&nbsp;</h4>
-                    <h4 class="mb-3">&nbsp;</h4>
                 </div>
             </div>
+            <div class="row mb-4" id="license">
+                <div class="col-md-8 mx-auto grey-container">
+                    <br>
+                    <p class="text-justify">
+                        Look Before you Speak assets are Copyright 2021 Google LLC, licensed under the CC-BY 4.0 license.
+                    </p>
+                </div>
+            </div>
+
             
         </div> <!-- container -->
     </body>
