change property url

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Project Page for Look Before you Speak">
      <meta name="author" content="Ruilong">
 
-    <meta property="og:url" content="https://google.github.io/aichoreographer/">
+    <meta property="og:url" content="https://google.github.io/look-before-you-speak/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Look Before you Speak: Visually Contextualized Utterances">
     <meta property="og:description" content="Look Before you Speak: Visually Contextualized Utterances">
